# lingva

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  changes.md  changes.rst  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yaml
src/lingva/: __init__.py  extract.py  polint.py
src/lingva/extractors/: __init__.py  babel.py  python.py  xml.py  zcml.py
tests/: test_extract.py
tests/data/: test_config.cfg
tests/extractors/: test_init.py  test_python.py  test_xml.py  test_zcml.py
