[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "wheel" ]

[project]
name = "lingva"
description = "Translation toolset"
readme = "README.rst"
keywords = [ "Babel", "gettext", "po", "translation" ]
license = "BSD-3-Clause"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Arkadii Yakovets" },
  { name = "Serhii Murza" },
]
authors = [
  { name = "Wichert Akkerman", email = "wichert@wiggy.net" },
]
requires-python = ">=3.10"

classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [
  "click>=8,<9",
  "polib>=1.2,<2",
]

optional-dependencies.chameleon = [
  "chameleon",
]
urls.homepage = "https://github.com/vacanza/lingva"
urls.tracker = "https://github.com/vacanza/lingva/issues"
scripts.polint = "lingva.polint:main"
scripts.pot-create = "lingva.extract:main"
entry-points."lingva.extractors".chameleon = "lingva.extractors.xml:ChameleonExtractor"
entry-points."lingva.extractors".python = "lingva.extractors.python:PythonExtractor"
entry-points."lingva.extractors".xml = "lingva.extractors.xml:ChameleonExtractor"
entry-points."lingva.extractors".zcml = "lingva.extractors.zcml:ZCMLExtractor"
entry-points."lingva.extractors".zope = "lingva.extractors.xml:ZopeExtractor"

[dependency-groups]
dev = [
  "pre-commit>=4.5,<5",
  "pytest>=9,<10",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
target-version = "py310"

line-length = 99
lint.select = [ "E4", "E5", "E7", "E9", "F", "W" ]
lint.flake8-errmsg.max-string-length = 99

[tool.isort]
known_first_party = [ "lingva", "tests" ]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git tmp* .eggs bin build include lib share src"
